--- a/bower.json
+++ b/bower.json
@@ -16,19 +16,19 @@
     "tests"
   ],
   "dependencies": {
-    "requirejs": "~2.1.15",
-    "lodash": "~3.4.0",
-    "requirejs-text": "~2.0.13",
-    "require-css": "~0.1.8",
-    "jquery": "~2.1.3",
-    "fontawesome": "~4.3.0",
-    "d3": "~3.5.3",
-    "jquery-ui": "~1.11.2",
-    "sprintf": "~1.0.2",
-    "queue-async": "~1.0.7",
-    "backbone.radio": "~0.9.0",
-    "backbone": "~1.1.2",
-    "jqueryui": "~1.11.3",
-    "colorbrewer": "~1.0.0"
+    "requirejs": "latest",
+    "lodash": "latest",
+    "requirejs-text": "latest",
+    "require-css": "latest",
+    "jquery": "latest",
+    "fontawesome": "latest",
+    "d3": "latest",
+    "jquery-ui": "latest",
+    "sprintf": "latest",
+    "queue-async": "latest",
+    "backbone.radio": "latest",
+    "backbone": "latest",
+    "jqueryui": "latest",
+    "colorbrewer": "latest"
   }
 }
